[tool.poetry]
name = "hyper-inspector"
version = "0.0.1"
description = "A simple HTTP inspector"
authors = ["s"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
requests = "^2.25.1"
black = "^20.8b1"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
